Fix post_token logic
