# swaggerDoc.yml
@@ -2,7 +2,7 @@ openapi: 3.0.1
 info:
   title: 3 APIs
   description: This is the description for 3 different endpoints
-  termsOfService: http://ec2-52-12-191-147.us-west-2.compute.amazonaws.com:8080/
+  termsOfService: http://ec2-52-12-191-147.us-west-2.compute.amazonaws.com:3000
   contact:
     email: wolfej@oregonstate.edu
   license:
@@ -10,7 +10,7 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   version: 1.0.0
 servers:
-- url: http://ec2-52-12-191-147.us-west-2.compute.amazonaws.com:8080/
+- url: http://ec2-52-12-191-147.us-west-2.compute.amazonaws.com:3000
 tags:
 - name: v1 
   description: Testing 3 APIs
@@ -22,28 +22,15 @@ paths:
       summary: Get details about the weather
       description: Multiple details about the weather are returned
       operationId: weather
-      parameters:
-      - name: username
-        in: query
-        description: The User Name for login
-        required: true
-        schema:
-          type: string
-      - name: password
-        in: query
-        description: The password for login
-        required: true
-        schema:
-          type: string
       responses:
         200:
-          description: successful operation
+          description: OK
           content:
             application/json:
               schema:
                 type: object
         401:
-          description: Unauthorized
+          description: Missing or invalid token
           content: {}
       security:
       - bearerAuth: []
@@ -54,28 +41,15 @@ paths:
       summary: Get a greeting
       description: Nonsensical mumbo jumbo hello response sent with humor
       operationId: hello
-      parameters:
-      - name: username
-        in: query
-        description: The User Name for login
-        required: true
-        schema:
-          type: string
-      - name: password
-        in: query
-        description: The password for login
-        required: true
-        schema:
-          type: string
       responses:
         200:
-          description: successful operation
+          description: OK
           content:
             application/json:
               schema:
                 type: object
         401:
-          description: Unauthorized
+          description: Missing or invalid token
           content: {}
       security:
       - bearerAuth: []
@@ -85,34 +59,25 @@ paths:
       - v1
       summary: return a mock token
       operationId: auth
-      parameters:
-      - name: username
-        in: query
-        description: The User Name for login
-        required: true
-        schema:
-          type: string
-      - name: password
-        in: query
-        description: The password for login
-        required: true
-        schema:
-          type: string
+      requestBody:
+        content:
+          application/json: 
+            schema:
+              type: object
+              properties:
+                username:
+                  type: string
+                password:
+                  type: string
+                  format: date-time
+              example:
+                username: joe
+                password: secretpassword
       responses:
         200:
-          description: successful operation
-          headers:
-            accesstoken:
-              description: "returns a jwt"
-              schema:
-                type: "string"
-            expires:
-              description: "date in UTC when token expires"
-              schema:
-                type: "string"
-                format: "date-time"
+          description: OK
           content:
-            application/json:
+            application/json: 
               schema:
                 $ref: '#/components/schemas/auth'
         403:
@@ -121,14 +86,10 @@ components:
   schemas:
     auth:
       type: object
-      properties:
-        username:
+      properties:        
+        access-token:
           type: string
-        password:
-          type: string
-        token:
-          type: string
-        expiration:
+        expires:
           type: string
           format: date-time
   securitySchemes:
@@ -136,5 +97,3 @@ components:
       type: http
       scheme: bearer
       bearerFormat: JWT
-security:
- - bearerAuth: []
